--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,13 @@ spring.application.name=AptitudeApp
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://aws-1-ap-south-1.pooler.supabase.com:6543/postgres?user=postgres.bqtnndxsxgqxnzflbtay&password=${SUPABASE_DB_PASS}
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.devtools.restart.enabled=false
+spring.datasource.hikari.data-source-properties.prepareThreshold=0
 
+#spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=5000
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.max-lifetime=15000
