--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=5000
 spring.datasource.hikari.connection-timeout=10000
 spring.datasource.hikari.max-lifetime=15000
+
+server.servlet.context-path=/aptitudeapp
