Add unit tests for Topic entity and configure H2 database for testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,27 @@
 spring.application.name=AptitudeApp
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://aws-1-ap-south-1.pooler.supabase.com:6543/postgres?user=postgres.bqtnndxsxgqxnzflbtay&password=${SUPABASE_DB_PASS}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://aws-1-ap-south-1.pooler.supabase.com:6543/postgres?user=postgres.bqtnndxsxgqxnzflbtay&password=${SUPABASE_DB_PASS}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.devtools.restart.enabled=false
-spring.datasource.hikari.data-source-properties.prepareThreshold=0
+#spring.datasource.hikari.data-source-properties.prepareThreshold=0
 
 #spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=5000
-spring.datasource.hikari.connection-timeout=10000
-spring.datasource.hikari.max-lifetime=15000
+#spring.datasource.hikari.minimum-idle=5
+#spring.datasource.hikari.idle-timeout=5000
+#spring.datasource.hikari.connection-timeout=10000
+#spring.datasource.hikari.max-lifetime=15000
+
+# Enable the H2 Console to view data in the browser (http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
+
+# Set the JDBC URL (In-memory mode)
+spring.datasource.url=jdbc:h2:mem:aptitudedb
+
+# Standard H2 Credentials
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 server.servlet.context-path=/aptitudeapp
